<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detailsScreenBackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activities.SplashActivity"
     >
    
    <TextView
        android:id="@+id/titleSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/titleSplashScreen"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/characterColor" />

    <TextView
        android:id="@+id/subTitleSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/titleSplashScreen"
        android:layout_marginTop="28dp"
        android:text="@string/subTitleSplashScreen"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/characterColor" />

    <TextView
        android:id="@+id/fromCameraLabelSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/fromCameraLabelSplash"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/characterColor" />
    
    <ImageButton
           android:id="@+id/buttonCameraSplash"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:clickable="true"
           android:contentDescription="@string/buttonCameraSplashDescription"
           android:src="@android:drawable/ic_menu_camera" />
    
    
    <ImageButton
           android:id="@+id/buttonGallerySplash"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_below="@+id/buttonCameraSplash"
           android:layout_marginTop="18dp"
           android:contentDescription="@string/cuttonGallerySplashDescription"
           android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/fromGalleryLabelSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/footerDescriptionSplash"
        android:layout_alignTop="@+id/buttonGallerySplash"
        android:layout_marginTop="15dp"
        android:text="@string/fromGallerySplashLabel"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/characterColor" />

    <TextView
        android:id="@+id/footerDescriptionSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/preferenceStatus"
        android:layout_alignRight="@+id/buttonGallerySplash"
        android:text="@string/footerSplashDescription"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/characterColor" />

    <TextView
        android:id="@+id/preferenceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/footerDescriptionSplash"
        android:text="@string/preferenceStatusDefaultText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/characterColor" />
    
</RelativeLayout>
